--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
+    "encoding": "^0.1.13",
+    "flowbite": "^1.6.2",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.1.0",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-multi-carousel": "^2.8.2",
+    "stepzen": "^0.26.0"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
