--- a/package.json
+++ b/package.json
@@ -7,20 +7,24 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "encoding": "^0.1.13",
     "flowbite": "^1.6.2",
     "graphql": "^16.6.0",
     "graphql-request": "^5.1.0",
     "next": "latest",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.2",
+    "react-timeago": "^7.1.0",
     "stepzen": "^0.26.0"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/react-timeago": "^4.1.3",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.4",
